<resources>
    <string name="app_name">Capstone</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Need an Account?</string>
    <string name="submitButtonText">Submit</string>
    <string name="uploadButtonText">Upload</string>
    <string name="projectLogoDescription">project logo</string>
    <string name="dashboardButtonText">Dashboard</string>
    <string name="partnerTitle">Expedia Capstone Project</string>
    <string name="projectTitle">Amenity Detector</string>
    <string name="captureImageButtonText">Capture Image</string>
    <string name="chooseImageButtonText">Choose Image</string>
    <string name="orText">or</string>
</resources>
